# csv_parser

./: .gitconfig  .gitignore  Cargo.toml  README.md
scripts/: http_req.sh
scripts/csv_generator/: README.md  fake_people.csv  index.js  old_fake_people.csv  package-lock.json  package.json
src/config/: Cargo.toml
src/config/src/: config.rs  lib.rs
src/server/: Cargo.toml
src/server/src/: app.rs  errors.rs  lib.rs  parser.rs
