[package]
name = "server"
version = "0.1.0"
authors = ["Ted Zilist <ted@goop.com>"]
edition = "2018"

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
actix-web = "2.0"
atone = { version = "0.3.1", features = ["serde"] }
bytes = { version = "0.5.6" }
config = { package = "config", path = "../config" }
csv = "1.1"
futures = "0.3.5"
log = "0.4"
serde = { version = "1.0" }
serde_json = "1.0"
